Testing pipeline - change header without changing it in tests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <title>Books</title>
 </head>
 <body>
+<br><h2 class="container h-100 d-flex justify-content-center">Welcome to the books app!</h2><br>
 <div class="container h-100 d-flex justify-content-center">
     <div class="my-auto">
         <div class="my-auto" th:if="${searchResults != null}">
